--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,10 @@ github_username: jekyll
 
 # Build settings
 plugins:
-  - jekyll-feed
+  - jekyll-watch
+watch:
+  scripts:
+    - "npm run build:ts"
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
