--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,11 @@ github_username: jekyll
 # Build settings
 plugins:
   - jekyll-watch
+  - jekyll-postcss
 watch:
   scripts:
     - "npm run build:ts"
+    - "npm run watch:css"
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
