--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ plugins:
 watch:
   scripts:
     - "npm run build:ts"
+    # - "npm run build:css"
     - "npm run watch:css"
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -43,13 +44,13 @@ watch:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
+exclude:
+  #   - .sass-cache/
+  - .jekyll-cache/
+  #   - gemfiles/
+  #   - Gemfile
+  #   - Gemfile.lock
+  - node_modules/
 #   - vendor/bundle/
 #   - vendor/cache/
 #   - vendor/gems/
