--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Your awesome site
-email: your-email@example.com
+email: curtiswirtz@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username: jekyll
 
 # Build settings
 plugins:
@@ -36,6 +34,8 @@ watch:
     - "npm run build:ts"
     # - "npm run build:css"
     - "npm run watch:css"
+    # Add the following line to watch for changes in the JavaScript directory
+    - "assets/js/**/*"
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
